--- a/GCNav/Window2.xaml
+++ b/GCNav/Window2.xaml
@@ -1,12 +1,21 @@
 ﻿<Window x:Class="WpfApplication.Window2"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:s="http://schemas.microsoft.com/surface/2008"
     xmlns:ui="clr-namespace:Microsoft.Sample.Controls"
-    Title="Window1" Width="800" Height="600">
-    <Grid>
+    Title="Window1" 
+    Width="1920"
+    Height="1080"
+    ResizeMode="CanResize"
+    WindowState="Maximized">
+    <Canvas>
+        
         <ScrollViewer x:Name="Scroller" HorizontalScrollBarVisibility="Auto" 
-                  VerticalScrollBarVisibility="Auto" CanContentScroll="True">
-            <ui:VirtualCanvas x:Name="Graph"/>
+                  VerticalScrollBarVisibility="Auto" CanContentScroll="True" Visibility="Visible">
+            <ui:VirtualCanvas x:Name="Graph" Width="800" Height="1080"/>
         </ScrollViewer>
-    </Grid>
+        <s:ScatterView Canvas.Top="0" x:Name="MainScatterView" Width="1920" Height="1080" Background="Transparent">
+            <s:ScatterViewItem  x:Name="MainSVI" Width="1920" Height="1080" Center="960,540" CanRotate="False" CanScale="False" Background="Transparent" Deceleration="0.01"></s:ScatterViewItem>
+        </s:ScatterView>
+    </Canvas>
 </Window>
