fix hotspots loading issue

--- a/LADSArtworkMode/HotspotDetailsControl.xaml
+++ b/LADSArtworkMode/HotspotDetailsControl.xaml
@@ -14,7 +14,7 @@
     <Border BorderBrush="#214236" BorderThickness="4" CornerRadius="4" Name="border">
         <Canvas Name="hotspotCanvas" Background="#618276" Opacity="0.95">
            
-            <s:SurfaceTextBox Name="HotspotTextBox" Height="272" Width="387" TextWrapping="Wrap" IsReadOnly="True" VerticalScrollBarVisibility="Auto" Canvas.Top="35" Canvas.Left="12" BorderThickness="2"/>
+            <s:SurfaceTextBox Name="HotspotTextBox" Height="272" Width="387" TextWrapping="Wrap" IsReadOnly="True" VerticalScrollBarVisibility="Auto" Canvas.Top="35" Canvas.Left="12" BorderThickness="2" IsHitTestVisible="False"/>
             <Image Name="HotspotImage" Height="272" Width="380" Visibility="Hidden"/>
             <DockPanel Name="Mix" Background="Transparent" Visibility="Hidden">
                 <Image Name="HotspotImageMix" Height="272" Width="380" DockPanel.Dock="Top"/>
