--- a/LADSArtworkMode/ArtworkModeWindow.xaml
+++ b/LADSArtworkMode/ArtworkModeWindow.xaml
@@ -46,7 +46,7 @@
 
         <s:ScatterView Name="MainScatterView" Height="1080" Width="1920" Canvas.ZIndex="400"></s:ScatterView>
 
-        <Canvas Name="ImageArea" Background="#ccd6c1" Height="1080" Width="1920" Canvas.ZIndex ="-1">
+        <Canvas Name="ImageArea" Background="White" Height="1080" Width="1920" Canvas.ZIndex ="-1">
 
             <Grid Name="DeepZoomGrid" Height="1080" Width="1920" Canvas.Top="0" Canvas.Left="0">
                 <dz:MultiScaleImage Name="msi">
@@ -100,26 +100,10 @@
         </s:SurfaceButton>-->
 
 
-        <DockPanel Name="BottomPanel" Opacity=".9" Canvas.Top="864" Background="#eceff0" Height="216" Width="1920" Canvas.ZIndex ="100">
+        <DockPanel Name="BottomPanel" Opacity=".9" Canvas.Top="864" Background="#eceff0" Height="216" Width="1920" Visibility="Collapsed" Canvas.ZIndex ="100">
  
-            <Grid Name="NavPanel" Background="#bdd0bd" DockPanel.Dock="Left" Width="384" Height="216">
-                <!-- zoom navigator -->
-                <Grid Margin="20, 20, 20, 20" Background="Black" ClipToBounds="True" Name="ThumbGrid">
-                    <dz:MultiScaleImage Name="msi_thumb" />
-                    <!-- artwork thumbnail MSI -->
-                    <dz:MultiScaleImage Name="msi_tour_thumb" Visibility="Hidden"/>
-                    <!-- tour thumbnail MSI-->
-
-                    <s:ScatterView Name="ThumbSV" Height="{Binding ElementName=ThumbGrid, Path=ActualHeight}" Width="{Binding ElementName=ThumbGrid, Path=ActualWidth}">
-                        <s:ScatterViewItem Name="ThumbSVI" CanRotate="False" ShowsActivationEffects="True" IsHitTestVisible="False" Opacity="1">
-                            <Rectangle Fill="Red" Opacity="0.5" Width="{Binding ElementName=ThumbSVI, Path=Width}" Height="{Binding ElementName=ThumbSVI, Path=Height}" Loaded="msi_thumb_rect_Loaded" PreviewTouchDown="Rectangle_PreviewTouchDown" MouseDown="Rectangle_MouseDown" />
-                        </s:ScatterViewItem>
-                    </s:ScatterView>
-                    <!--Rectangle Name="msi_thumb_rect"  Fill="Red" Opacity="0" ManipulationDelta="msi_thumb_rect_ManipulationDelta" Loaded="msi_thumb_rect_Loaded"/-->
-
-                    <!-- zoom navigation indicator -->
-                </Grid>
-            </Grid>
+            <!--where nav panel used to be-->
+            
             <DockPanel DockPanel.Dock="Right">
                 
                   <Canvas Name="collapseBar" Width="1536" HorizontalAlignment="Stretch" DockPanel.Dock="Top" Visibility="Visible" IsHitTestVisible="True" Canvas.ZIndex="20">
@@ -218,14 +202,14 @@
                 </Canvas>
                
             </s:SurfaceButton>
-            
-            <StackPanel Name="leftPaneContent" Background="#618276" DockPanel.Dock="Right">
+
+            <StackPanel Name="leftPaneContent" Background="#283869" DockPanel.Dock="Right">
                 <Canvas Name="Tools" 
                         Height="{Binding Height, ElementName=SectionBoxMaster}"
                         MinHeight="{Binding Height, ElementName=SectionBoxMaster}"
                         MaxHeight="{Binding Height, ElementName=SectionBoxMaster}"
                         Width="{Binding Width, ElementName=SectionBoxMaster}" 
-                        Background="#618276">
+                        Background="#283869">
 
                     <Label Content="Tools"
                            FontSize="{Binding FontSize, ElementName=SectionTitlesMaster}"
@@ -306,12 +290,12 @@
                         MaxHeight="{Binding Height, ElementName=SectionBoxMaster}"
                         Width="{Binding Width, ElementName=SectionBoxMaster}">
 
-                    <Label Content="Hotspots" 
+                    <Label Content="Other Images" 
                            FontFamily="Segoe360" FontSize="{Binding FontSize, ElementName=SectionTitlesMaster}" 
                            FontWeight="Bold" Name="labelHotspotNav"/>
 
                     <s:SurfaceButton Name="toggleHotspots" 
-                                     Content="Hotspots On"
+                                     Content="On"
                                      
                                      Height="{Binding Height, ElementName=LeftPanelButtonMaster}"
                                      MinHeight="{Binding Height, ElementName=LeftPanelButtonMaster}"
@@ -365,7 +349,7 @@
                         MinHeight="{Binding Height, ElementName=SectionBoxMaster}"
                         MaxHeight="{Binding Height, ElementName=SectionBoxMaster}" 
                         Width="{Binding Width, ElementName=SectionBoxMaster}">
-                    <Label Content="Associated Media" FontFamily="Segoe360" 
+                    <Label Content="Artist's Statement" FontFamily="Segoe360" 
                            FontSize="{Binding FontSize, ElementName=SectionTitlesMaster}" FontWeight="Bold" Height="40" 
                            HorizontalAlignment="Left" Name="labelDocs" VerticalAlignment="Top" Width="240" />
 
@@ -397,7 +381,8 @@
                         MinHeight="{Binding Height, ElementName=SectionBoxMaster}"
                         MaxHeight="{Binding Height, ElementName=SectionBoxMaster}"
                         Width="{Binding Width, ElementName=SectionBoxMaster}"
-                        Background="#ee618276">
+                        Background="#283869"
+                        Visibility="Collapsed">
                     <Label Grid.Row="3" Content="Tours" FontFamily="Segoe360" FontSize="{Binding FontSize, ElementName=SectionTitlesMaster}" FontWeight="Bold" Height="40" HorizontalAlignment="Left" Margin="2,1,0,0" Name="labelTours" VerticalAlignment="Top" Width="380" />
                     <Label Grid.Row="3" Content="Currently Playing Tour" FontFamily="Segoe360" FontSize="{Binding FontSize, ElementName=SectionTitlesMaster}" FontWeight="Bold" Height="40" HorizontalAlignment="Left" Margin="2,1,0,0" Name="labelResumeTour" Canvas.Top="90" Width="380" Visibility="Collapsed"/>
                     <s:SurfaceButton Name="sBResumeTour1" Content="Resume"
@@ -438,7 +423,31 @@
                     <s:SurfaceButton Content="Tour (setup)" Height="30" HorizontalAlignment="Left" Margin="10,180,0,0" Name="TourSetupButton" VerticalAlignment="Top" Width="115" Grid.Row="2" Click="TourSetupButton_Click" MinWidth="0" MinHeight="0" Padding="11,2,0,0" /> -->
 
                 </Canvas>
+                <Grid Name="NavPanel" Background="#283869" 
+                      Height="{Binding Height, ElementName=SectionBoxMaster}" 
+                      MaxHeight="{Binding Height, ElementName=SectionBoxMaster}" 
+                      MinHeight="{Binding Height, ElementName=SectionBoxMaster}" 
+                      Width="{Binding Width, ElementName=SectionBoxMaster}" 
+                      MaxWidth="{Binding Width, ElementName=SectionBoxMaster}" 
+                      MinWidth="{Binding Width, ElementName=SectionBoxMaster}"
+                      Visibility="Visible">
+                    <!-- zoom navigator -->
+                    <Grid Margin="0, 0, 0, 0" Background="Black" ClipToBounds="True" Name="ThumbGrid">
+                        <dz:MultiScaleImage Name="msi_thumb" />
+                        <!-- artwork thumbnail MSI -->
+                        <dz:MultiScaleImage Name="msi_tour_thumb" Visibility="Hidden"/>
+                        <!-- tour thumbnail MSI-->
 
+                        <s:ScatterView Name="ThumbSV" Height="{Binding ElementName=ThumbGrid, Path=ActualHeight}" Width="{Binding ElementName=ThumbGrid, Path=ActualWidth}">
+                            <s:ScatterViewItem Name="ThumbSVI" CanRotate="False" ShowsActivationEffects="True" IsHitTestVisible="False" Opacity="1">
+                                <Rectangle Fill="Red" Opacity="0.5" Width="{Binding ElementName=ThumbSVI, Path=Width}" Height="{Binding ElementName=ThumbSVI, Path=Height}" Loaded="msi_thumb_rect_Loaded" PreviewTouchDown="Rectangle_PreviewTouchDown" MouseDown="Rectangle_MouseDown" />
+                            </s:ScatterViewItem>
+                        </s:ScatterView>
+                        <!--Rectangle Name="msi_thumb_rect"  Fill="Red" Opacity="0" ManipulationDelta="msi_thumb_rect_ManipulationDelta" Loaded="msi_thumb_rect_Loaded"/-->
+
+                        <!-- zoom navigation indicator -->
+                    </Grid>
+                </Grid>
             </StackPanel>
         </DockPanel>
 
@@ -473,9 +482,9 @@
             </StackPanel>
         </DockPanel>
         <s:SurfaceButton Name="exitButton" Content="QUIT" Background="Red" Opacity=".5" FontSize="22" Width="70" Height="50" Canvas.Right="5" Click="ExitButton_Click" Canvas.ZIndex="100" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <Image Name="help" Visibility="Visible" Source="Resources/question.png" MouseDown="help_MouseDown" TouchDown="help_TouchDown" Height="50" Width="50" Canvas.Top="5" Canvas.Right="80" />
+        <Image Name="help" Visibility="Hidden" Source="Resources/question.png" MouseDown="help_MouseDown" TouchDown="help_TouchDown" Height="50" Width="50" Canvas.Top="5" Canvas.Right="80" />
         <s:SurfaceButton Name="resetArtworkButton" Content="Reset Artwork" FontSize="22" Height="50" Width="170" Canvas.Right="135" Click="ResetArtworkButton_Click" Canvas.ZIndex="100" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <s:SurfaceButton Name="switchToCatalogButton" Content="Catalog" FontSize="22" Height="50" Width="100" Canvas.Right="310"  Click="switchToCatalogButton_Click" Canvas.ZIndex="100" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+        <s:SurfaceButton Name="switchToCatalogButton" Content="Back" FontSize="22" Height="50" Width="100" Canvas.Right="310"  Click="switchToCatalogButton_Click" Canvas.ZIndex="100" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <s:SurfaceButton Name="tourAuthoringButton" Content="Tour Authoring" FontSize="22" Height="50" Width="180" Canvas.Right="415" Click="tourAuthoring_Click" Canvas.ZIndex="100" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <s:SurfaceButton Name="tourAuthoringDoneButton" Content="Done" Opacity=".5" FontSize="22" Height="50" Width="75" Canvas.Right="135" Visibility="Collapsed" Canvas.ZIndex="100" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <s:SurfaceButton Name="tourAuthoringSaveButton" Content="Save" Opacity=".5" FontSize="22" Height="50" Width="75" Canvas.Right="215" Visibility="Collapsed" Canvas.ZIndex="100" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
